--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
